# BeerSmith-mcp-server

./: .gitignore  CHANGELOG.md  PRICE_UPDATE_EXAMPLE.md  PRICE_VERIFICATION.md  QUICK_START.md  README.md  TESTING_PRICE_FIX.md  claude_desktop_config.json  debug_compare.py  debug_equipment2.py  pyproject.toml  test_server.sh
docs/: CLAUDE.md  DESIGN.md  PRICE_CONVERSION_GUIDE.md  QUICK_START.md
src/beersmith_mcp/: __init__.py  currency_config.json  matching.py  models.py  parser.py  server.py
tests/: check_element21.py  debug_equipment.py  search_brewtech.py
