[project]
name = "beersmith-mcp"
version = "0.1.0"
description = "MCP Server for BeerSmith 3 - Read and write recipes, access ingredient databases"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Best Brewer" }
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0",
    "lxml>=5.0.0",
]

[project.scripts]
beersmith-mcp = "beersmith_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beersmith_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
